2002-03-28  Jeff Freedman  <jeff@amy.nerble.net>

	* shapes/vgafile.{cc,h}:  Vga_file class can now read single-shape
	files (i.e., 'pointers.shp').
	* palette.cc (Palette): Check patch dir. before static.

2002-03-24  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* gamewin.cc: also display name when showing NPC numbers
	* gamedat.cc: delete newgame.ver, exult.ver when loading zipped saves

2002-03-23  Jeff Freedman  <jeff@amy.nerble.net>

	* exult.cc: 'Paint' mode implemented.  Tile grid is shown on
	ground when in this mode.

2002-03-23  Willem Jan Palenstijn  <wjpalenstijn@users.sourceforge.net>
	* Makefile.be, be_midi.cc, xmidi.cc: merged BeOS patch by Jack Burton

2002-03-23  Willem Jan Palenstijn  <wjpalenstijn@users.sourceforge.net>
	* usecode/conversation.cc: removed some debugging output
	* audio/Audio.cc, files/Flex.cc: added newline at end of file

2002-03-23  Jeff Freedman  <jeff@amy.nerble.net>

	* cheat.h,server.h,mouse.cc,objserial.cc:  Edit mode set from
	ExultStudio, with mouse changed depending on mode (which doesn't
	do anything yet).
	* exult_studio.glade:  'Mode' menu added (but modes not
	implemented yet.)

2002-03-22  Ryan Nunn  <triforce@merlin.net.au>
	* usecode/ucinternal.cc : Added break in opcode 0xCD.

2002-03-21  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* headers/exceptions.h: fixed typo

2002-03-20  Jeff Freedman  <jeff@amy.nerble.net>

	* mapedit/shapelst.cc: "New shape", "Edit tiled" added to popup in
	shape browser.

2002-03-20  Ryan Nunn  <triforce@merlin.net.au>
	* game.cc : Fixing allignment problem in German BG Menu

2002-03-20  Ryan Nunn  <triforce@merlin.net.au>
	* bggame.cc : Fixing problems with overlapping text in German create
	  new game screen.

2002-03-18  Jeff Freedman  <jeff@amy.nerble.net>

	* mapedit/shapelst.cc: Import/export frames.  Also put in WIN32
	code (untested) for running image-editor.

2002-03-18  Dominik Reichardt <gigdr@tesionmail.de>